<resources>
    <string name="app_name">android-accountbook-18</string>

    <string name="bottom_navi_history">내역</string>
    <string name="bottom_navi_calendar">달력</string>
    <string name="bottom_navi_statistics">통계</string>
    <string name="bottom_navi_configuration">설정</string>

    <string name="input_appbar_title">내역 등록</string>
    <string name="revise_appbar_title">내역 수정</string>
    <string name="input_tbtn_income">수입</string>
    <string name="input_tbtn_expenditure">지출</string>
    <string name="input_tv_date">일자</string>
    <string name="input_tv_amount">금액</string>
    <string name="input_tv_payment">결제 수단</string>
    <string name="input_tv_classification">분류</string>
    <string name="input_tv_content">내용</string>
    <string name="input_btn_register">등록하기</string>
    <string name="revise_btn_register">수정하기</string>
    <string name="input_edt_hint">입력하세요</string>
    <string name="input_sp_hint">선택하세요</string>
    <string name="input_sp_add">추가하기</string>
    <string name="input_amount">%,d</string>

    <string name="revise_payment_appbar_title">결제 수단 수정하기</string>
    <string name="add_payment_appbar_title">결제 수단 추가하기</string>
    <string name="add_payment_tv_division_title">이름</string>

    <string name="add_category_tv_title">색상</string>
    <string name="spend_category_appbar_title">지출 카테고리 추가</string>
    <string name="income_category_appbar_title">수입 카테고리 추가</string>

    <string name="history_income">수입</string>
    <string name="history_spend">지출</string>
    <string name="history_amount_sum">%,d</string>
    <string name="history_income_amount">%,d원</string>
    <string name="history_spend_amount">-%,d원</string>
    <string name="history_empty_view">내역이 없습니다.</string>
    <string name="history_trash_appbar_title">다중선택</string>

    <string name="calendar_day">%d</string>
    <string name="calendar_amount">%,d</string>

    <string name="statistics_spend_sum_amount">이번 달 총 지출 금액</string>
    <string name="statistics_amount">%,d</string>
    <string name="statistics_percent">%d\%%</string>

    <string name="configuration">설정하기</string>

</resources>