<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.psw9999.android_accountbook_18.ui.categoryadd.CategoryAddViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.categoryadd_CategoryAddFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/l_ab_add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/ab_add_category"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:navigationIcon="@drawable/ic_property_1_back"
                app:title="@{viewModel.isSpend ? @string/spend_category_appbar_title : @string/income_category_appbar_title}"
                app:titleCentered="true" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple"
            app:layout_constraintTop_toBottomOf="@id/l_ab_add_category" />

        <com.psw9999.android_accountbook_18.ui.common.customview.TextViewWithDivision
            android:id="@+id/tv_division_add_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/l_ab_add_category"
            app:setTitle="@string/add_payment_tv_division_title" />

        <EditText
            android:id="@+id/edt_category_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="100dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:hint="@string/input_edt_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="0dp"
            android:textColorHint="@color/lightPurple"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_division_add_category"
            app:layout_constraintEnd_toEndOf="@id/tv_division_add_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_division_add_category" />

        <Button
            android:id="@+id/btn_category_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/bg_btn_register"
            android:enabled="@{viewModel.categoryTitle.length() > 2 ? true : false}"
            android:text="@string/input_btn_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_category_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/add_category_tv_title"
            android:textColor="@color/lightPurple"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_division_add_category" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/dv_category_color"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@color/purple_40"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_category_color" />

        <GridView
            android:id="@+id/gv_category_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:horizontalSpacing="10dp"
            android:numColumns="10"
            android:verticalSpacing="21dp"
            app:layout_constraintEnd_toEndOf="@id/dv_category_color"
            app:layout_constraintStart_toStartOf="@id/dv_category_color"
            app:layout_constraintTop_toBottomOf="@id/dv_category_color" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/bot_dv_category_color"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="21dp"
            android:background="@color/purple_40"
            app:layout_constraintEnd_toEndOf="@id/dv_category_color"
            app:layout_constraintStart_toStartOf="@id/dv_category_color"
            app:layout_constraintTop_toBottomOf="@id/gv_category_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>